add: ves service
